@@ -144,19 +144,6 @@ h_prec.o : ../Modules/noncol.o
 h_prec.o : ../Modules/recvec.o
 h_prec.o : ../PW/src/pwcom.o
 h_prec.o : lrcom.o
-h_psiq.o : ../FFTXlib/fft_interfaces.o
-h_psiq.o : ../Modules/becmod.o
-h_psiq.o : ../Modules/control_flags.o
-h_psiq.o : ../Modules/fft_base.o
-h_psiq.o : ../Modules/kind.o
-h_psiq.o : ../Modules/noncol.o
-h_psiq.o : ../Modules/recvec.o
-h_psiq.o : ../Modules/uspp.o
-h_psiq.o : ../Modules/wavefunctions.o
-h_psiq.o : ../PW/src/pwcom.o
-h_psiq.o : ../PW/src/realus.o
-h_psiq.o : ../PW/src/scf_mod.o
-h_psiq.o : lrcom.o
 incdrhoscf.o : ../FFTXlib/fft_interfaces.o
 incdrhoscf.o : ../Modules/cell_base.o
 incdrhoscf.o : ../Modules/fft_base.o
